Add CanhBaoHocVu feature, enhance DTOs, and implement current semester retrieval